[package]
name = "v-ayylmao"
version = "0.0.1"
edition = "2021"
license = "0BSD"
description = "High-level VA-API bindings"
keywords = ["libva", "video", "decode", "codec", "acceleration"]

[dependencies]
libloading = "0.7.3"
bitflags = "1.3.2"
once_cell = "1.13.1"
raw-window-handle = { version = "0.5.0", features = ["alloc"] }
log = "0.4.17"
bytemuck = { version = "1.12.1", features = ["derive", "min_const_generics"] }

[dev-dependencies]
winit = { version = "0.27.2", default-features = false, features = ["x11", "wayland", "wayland-dlopen"] }
env_logger = "0.10.0"
jfifdump = "0.3.1"
softbuffer = "0.2.0"
jpeg-decoder = "0.3.0"
anyhow = "1.0.68"
byteorder = "1.4.3"
